# HypercomplexKeras

./: LICENCE  README.md  pyproject.toml
examples/: ExampleConvolutional.ipynb  ExampleHyperdense.ipynb  ExamplePyTorchHyperdense.ipynb
src/HypercomplexKeras/: Algebra.py  Convolutional.py  Hyperdense.py  HyperdenseTorch.py  Makefile  doc_generator.py
src/HypercomplexKeras/experimental/: ExperimentalHyperConvolutionalTorch.py
